# virtual-iot-simulator

./: .gitignore  IMPLEMENTATION_PLAN.md  Makefile  README.md  buf.gen.yaml  buf.yaml
.github/workflows/: frontend.yml  go.yml  proto.yml  python.yml
deployments/: Dockerfile.frontend  Dockerfile.orchestrator  Dockerfile.runtime  docker-compose.yaml  nginx.frontend.conf  prometheus.yml
deployments/grafana/dashboards/: simulator.json
deployments/grafana/provisioning/dashboards/: dashboard.yaml
device-runtime/: .golangci.yml  go.mod  go.sum
device-runtime/cmd/runtime/: main.go
device-runtime/internal/device/: clock.go  device.go  device_test.go  fault.go  manager.go  manager_test.go
device-runtime/internal/generator/: brownian.go  diurnal.go  factory.go  factory_test.go  gaussian.go  gaussian_test.go  generator.go  markov.go  replay_test.go
device-runtime/internal/metrics/: metrics.go
device-runtime/internal/protocol/: amqp.go  console.go  console_test.go  http.go  mqtt.go  mqtt_tls.go  publisher.go
device-runtime/internal/server/: broadcaster.go  grpc.go  interceptors.go
docs/: DEVICE_PROFILES.md  SYSTEM.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  theme.ts
frontend/src/api/: client.ts  types.ts
frontend/src/api/hooks/: useCreateProfile.ts  useDeleteProfile.ts  useHealth.ts  useProfiles.ts  useSpawnDevices.ts  (+4 more)
frontend/src/pages/: DashboardPage.tsx  DevicesPage.tsx  ProfilesPage.tsx  TelemetryPage.tsx
orchestrator/: Pipfile  pyproject.toml
orchestrator/orchestrator/: __init__.py  api.py  cli.py  config.py  database.py  grpc_client.py  models.py  pool.py  scenario.py
orchestrator/orchestrator/api/: __init__.py  schemas.py
orchestrator/orchestrator/api/routes/: devices.py  profiles.py
orchestrator/scenarios/: ramp_up.py
orchestrator/tests/: test_config.py
profiles/: temperature_sensor.yaml
proto/simulator/v1/: common.proto  device.proto  orchestrator.proto  scenario.proto  telemetry.proto
(+1 files in other folders)
